--- a/Mod_for_Project/vga_module_summary.html
+++ b/Mod_for_Project/vga_module_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Pixel_On_Text Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>vga_module Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Mod_for_Project.xise</TD>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 05/04/2017 - 10:33:16</center>
+<br><center><b>Date Generated:</b> 05/04/2017 - 11:04:24</center>
 </BODY></HTML>
